testing/Travis/testcases/Kleene/typecheck/shouldFail/kleeneReductionNonEndo.adl
CONTEXT Neg IN ENGLISH
RELATION s[A*B]
RULE bad : s% |- s
ENDCONTEXT
